<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">9.5 a AM1</string>
    <string name="singleplayer">1 Jogador</string>
    <string name="multiplayer">Multijogador</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="alterar_fotografia">Alterar fotografia</string>
    <string name="jogador">Jogador</string>
    <string name="jogadorMp">Jogador %1$d</string>
    <string name="salvar">Salvar</string>
    <string name="edit_paragraph">Nesta página poderás editar as tuas informações de jogador</string>
    <string name="points_placeholder">%1$d pts</string>
    <string name="points_card">Pontos: %1$d</string>
    <string name="level_card">Nível: %1$d</string>
    <string name="time_card">Tempo: %1$d</string>
    <string name="nivel_placeholder">Nível %1$d</string>
    <string name="exit_dialog_title">Sair</string>
    <string name="exit_dialog_message">Queres mesmo sair do jogo?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="you_won">Ganhou!</string>
    <string name="game_over">Jogo terminado!</string>
    <string name="try_again">Tentar novamente</string>
    <string name="main_menu">Menu Principal</string>
    <string name="you_lost">Perdeu!</string>
    <string name="levelsSp">Nível alcançado:</string>
    <string name="pointsSp">Pontos ganhos:</string>
    <string name="levelsMp">Nível alcançado:</string>
    <string name="pointsMp">Pontos ganhos:</string>
    <string name="finalLevel">%1$d</string>
    <string name="finalPoints">%1$d</string>
    <string name="finalLevelMp">Nível: %1$d</string>
    <string name="finalPointsMp">Pontos: %1$d</string>
    <string name="pontuacao">Pontuação:</string>
    <string name="correctAnswers">%1$d/%2$d respostas acertadas</string>
    <string name="server_mode">Modo Servidor</string>
    <string name="credits">Créditos</string>
    <string name="client_mode">Modo Cliente</string>
    <string name="ask_ip">IP do Servidor:</string>
    <string name="button_connect">Conectar</string>
    <string name="button_cancel">Cancelar</string>
    <string name="error_address">Endereço não reconhecido</string>
    <string name="ask_name">Choose your name:</string>
    <string name="msg_ip_address">IP do Servidor: %s[...]</string>
    <string name="credits_text">Aplicação desenvolvida no contexto da unidade curricular de Arquiteturas Móveis do 3º ano de Licenciatura em Engenharia Informática do Instituto Superior de Engenharia de Coimbra</string>
    <string name="leaderboards">Top Pontuações</string>
    <string name="partilha_o_ip_do_servidor_com_os_teus_amigos">Partilha o IP do servidor com os teus amigos</string>
    <string name="server_ip_placeholder" translatable="false">127.0.0.1</string>
    <string name="start_game">Começar o jogo</string>
    <string name="connect_to_server">Ligar a um servidor</string>
    <string name="leaderboard">Top Pontuações</string>
    <string name="aqui_podes_encontrar_o_top_5_de_melhores_jogadores">Aqui podes encontrar o top 5 de melhores jogadores</string>
    <string name="points">Pontos</string>
    <string name="by_points">Pontos</string>
    <string name="by_time">Tempo</string>
    <string name="time">Tempo</string>
</resources>