<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/circle"
    tools:context=".EditProfileActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/player_avatar2"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_margin="0dp"
        android:layout_marginBottom="540dp"
        android:adjustViewBounds="true"
        android:background="@drawable/rounded_box"
        android:backgroundTint="#FF9800"
        android:clipToOutline="true"
        android:padding="10dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.19"
        app:shapeAppearanceOverlay="@style/roundimageview"
        app:strokeColor="#FF9800"
        app:strokeWidth="5dp"
        tools:targetApi="s" />

    <androidx.constraintlayout.utils.widget.ImageFilterButton
        android:id="@+id/imageFilterButton2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="35dp"
        android:adjustViewBounds="false"
        android:clickable="false"
        android:scaleX="2"
        android:scaleY="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_settings_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/adneue_bold"
        android:text="@string/editar_perfil"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageFilterButton2" />

    <Button
        android:id="@+id/changePic_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#CA831A"
        android:fontFamily="@font/adneue_bold"
        android:text="@string/alterar_fotografia"
        app:icon="@drawable/ic_photo"
        app:layout_constraintBottom_toTopOf="@+id/save_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_avatar2"
        app:layout_constraintVertical_bias="0.18" />

    <EditText
        android:id="@+id/username_textField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="31dp"
        android:ems="10"
        android:fontFamily="@font/adneue_bold"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:maxLines="1"
        android:text="@string/jogador"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/changePic_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_avatar2"
        app:layout_constraintVertical_bias="0.050000012"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:backgroundTint="#769818"
        android:text="@string/salvar"
        app:icon="@drawable/ic_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/adineue_regular"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/edit_paragraph"
        android:textAlignment="center"
        android:textColor="#AAA9A9"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/player_avatar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.07999998" />

</androidx.constraintlayout.widget.ConstraintLayout>