<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingBottom="0dp"
    tools:context=".GameActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/rounded_box"
        android:backgroundTint="#373737"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/player_avatar_ingame"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="0dp"
            android:adjustViewBounds="true"
            android:background="@drawable/rounded_box"
            android:backgroundTint="#FF9800"
            android:clipToOutline="true"
            android:padding="5dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/roundimageview"
            app:strokeColor="#FF9800"
            app:strokeWidth="5dp"
            tools:targetApi="s" />

        <TextView
            android:id="@+id/player_name_ingame"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/adneue_bold"
            android:foregroundGravity="center_vertical|center_horizontal"
            android:gravity="start|center_vertical"
            android:text="@string/jogador"
            android:textColor="#FFFFFF"
            android:textSize="19sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/player_avatar_ingame"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="171dp"
            tools:layout_conversion_absoluteWidth="151dp" />

        <TextView
            android:id="@+id/points_card"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/adineue_regular"
            android:gravity="center|start"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"
            android:text="@string/points_card"
            android:textColor="#A5A5A5"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/player_name_ingame" />

        <TextView
            android:id="@+id/time_card"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/adineue_regular"
            android:gravity="center|start"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"
            android:text="@string/time_card"
            android:textColor="#A5A5A5"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/player_name_ingame"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/level_card"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="3dp"
            android:fontFamily="@font/adineue_regular"
            android:gravity="center|start"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"
            android:text="@string/level_card"
            android:textColor="#A5A5A5"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/points_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/player_name_ingame"
            app:layout_constraintTop_toBottomOf="@+id/time_card" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>