<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".GameEndActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/gameEndImage"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:background="@drawable/rounded_box"
                android:backgroundTint="#FF9800"
                android:clipToOutline="true"
                android:padding="10dp"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/roundimageview"
                app:strokeColor="#FF9800"
                app:strokeWidth="5dp"
                tools:targetApi="s"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="!"
                android:textColor="@color/white"
                android:textSize="70sp"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autoSizeMaxTextSize="30sp"
            android:autoSizeMinTextSize="20sp"
            android:fontFamily="@font/adneue_bold"
            android:text="@string/game_over"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerThickness="3dp"
            app:dividerColor="@color/white"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeMaxTextSize="30sp"
            android:autoSizeMinTextSize="20sp"
            android:fontFamily="@font/adneue_bold"
            android:text="@string/pontuacao"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_box"
            android:backgroundTint="#373737"
            android:padding="10dp"
            android:scrollbars="vertical">

            <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/try_again"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="15sp"
                android:autoSizeMinTextSize="5sp"
                android:backgroundTint="#FF9800"
                android:fontFamily="@font/adneue_bold"
                android:onClick="tryAgain"
                android:text="@string/try_again"
                android:textColor="#FFFFFF"
                android:textSize="10sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/mainMenu"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="15sp"
                android:autoSizeMinTextSize="5sp"
                android:backgroundTint="#FF9800"
                android:fontFamily="@font/adneue_bold"
                android:onClick="mainMenu"
                android:text="@string/main_menu"
                android:textColor="#FFFFFF"
                android:textSize="10sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>