<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MultiplayerLobby"
    android:background="#ffffff"
    android:padding="16dp">


    <androidx.constraintlayout.utils.widget.ImageFilterButton
        android:id="@+id/imageFilterButton3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="35dp"
        android:adjustViewBounds="false"
        android:clickable="false"
        android:scaleX="2"
        android:scaleY="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/globe"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/multiplayerLobbyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/adneue_bold"
        android:text="@string/multiplayer"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageFilterButton3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="17dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/adineue_regular"
        android:text="@string/partilha_o_ip_do_servidor_com_os_teus_amigos"
        android:textColor="#8B8B8B"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multiplayerLobbyTitle" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rounded_box"
        android:backgroundTint="#403F3F"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/player_avatar_lobby"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="0dp"
            android:layout_marginBottom="540dp"
            android:adjustViewBounds="true"
            android:background="@drawable/rounded_box"
            android:backgroundTint="#FF9800"
            android:clipToOutline="true"
            android:padding="5dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.19"
            app:shapeAppearanceOverlay="@style/roundimageview"
            app:strokeColor="#FF9800"
            app:strokeWidth="3dp"
            tools:srcCompat="@tools:sample/avatars"
            tools:targetApi="s" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/player_name_lobby"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/adineue_regular"
                android:text="@string/jogador"
                android:textAlignment="textStart"
                android:textColor="#8B8B8B" />

            <TextView
                android:id="@+id/server_ip_lobby"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:fontFamily="@font/adneue_bold"
                android:foregroundGravity="center_vertical|center_horizontal"
                android:gravity="start|center_vertical"
                android:letterSpacing="0.05"
                android:text="@string/server_ip_placeholder"
                android:textAlignment="viewStart"
                android:textColor="#FFFFFF"
                android:textSize="19sp"
                tools:layout_conversion_absoluteHeight="171dp"
                tools:layout_conversion_absoluteWidth="151dp" />
        </LinearLayout>

        <androidx.constraintlayout.utils.widget.ImageFilterButton
            android:id="@+id/copyToClipboardBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="0"
            android:adjustViewBounds="false"
            android:backgroundTint="#403F3F"
            android:clickable="true"
            android:foregroundTint="@android:color/transparent"
            android:scaleX="1.2"
            android:scaleY="1.2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/clipboard_copy"
            tools:ignore="SpeakableTextPresentCheck"
            android:focusable="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <Button
        android:id="@+id/startGameBtn_lobby"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#FF9800"
        android:text="@string/start_game"
        android:textColor="#FFFFFF"
        app:icon="@drawable/ic_videogame_asset_24"
        app:iconGravity="textStart"
        app:iconSize="30dp"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/connectToServerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#FF5722"
        android:clickable="true"
        android:enabled="true"
        android:text="@string/connect_to_server"
        android:textColor="#FFFFFF"
        app:icon="@drawable/ic_videogame_asset_24"
        app:iconGravity="textStart"
        app:iconSize="30dp"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/startGameBtn_lobby"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/conneted_players_lobby_scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_box"
        android:backgroundTint="#2F2F2F"
        app:layout_constraintBottom_toTopOf="@+id/connectToServerBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:id="@+id/connected_players_lobby"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>